k8s/media-services/profilarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: profilarr
  namespace: media-services
  labels:
    app: profilarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: profilarr
